<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/launchgraphic_edit"
        />
    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/font_size_large"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/curButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_current"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:layout_constraintBottom_toTopOf="@id/selectButton"/>

    <Button
        android:id="@+id/selectButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_address"
        android:textColor="@android:color/black"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/curButton"/>



</androidx.constraintlayout.widget.ConstraintLayout>